--- a/hello-java/Dockerfile
+++ b/hello-java/Dockerfile
@@ -19,8 +19,8 @@ COPY  run-app.sh /opt/app-root/bin/
 
 
 
-RUN   chown -R 1001 /opt/app-root && \
-      chmod -R 700 /opt/app-root
+RUN   chgrp -R 0 /opt/app-root && \
+      chmod -R g=u /opt/app-root
 
 EXPOSE 8080
 
