--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     agent {
       node {
-        // TODO: run this simple pipeline on jenkins 'master' node
+        label 'master'
       }
     }
 
@@ -23,10 +23,20 @@ pipeline {
             }
         }
 
-        // TODO: ADD A STAGE THAT SAYS HELLO
+       stage('stage 2') {
+          steps {
+            sh 'echo hello from stage2!'
+          }
+       }
 
-        // TODO: ADD AN APPROVAL STAGE
-
+        stage('manual approval') {
+          steps {
+            timeout(time: 60, unit 'MINUTES') {
+              input message: "Move top stage 3?"
+            }
+          }
+        } 
+        
         stage('stage 3') {
             steps {
                 sh 'echo hello from stage 3!. This is the last stage...'
