--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
 
         stage('manual approval') {
           steps {
-            timeout(time: 60, unit 'MINUTES') {
+            timeout(time: 60, unit: 'MINUTES') {
               input message: "Move top stage 3?"
             }
           }
