--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -60,7 +60,7 @@ pipeline {
                 sh '''
                         oc project ${DEV_PROJECT}
                         oc new-app --as-deployment-config --name books nodejs:12~${APP_GIT_URL} \
-                        --build-env npm_config_registry=${NEXUS_SERVER}
+                        --build-env npm_config_registry=${NEXUS_SERVER} \
                         --context-dir ${APP_NAME}
 
                         oc expose svc/${APP_NAME}
